--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,18 +4,21 @@
 
 body {
     font-family: sans-serif;
+    line-height: 2;
 }
 
 .background {
-    background-image: url(./../assets/images/Background.jpg) ;
+    background-image: url(./../images/Background.jpg) ;
 }
 
 img {
-    width: 25%;
+    width: 250px;
 }
 
 .user-card {
-
+    width: 25%;
+    margin: 50px auto;
+    box-shadow: 0px `px 0px red;
 }
 
 a {
